--- a/DingwingsA/DingwingsA/DingwingsA.csproj
+++ b/DingwingsA/DingwingsA/DingwingsA.csproj
@@ -41,13 +41,27 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Game1.cs" />
+    <Compile Include="Core\Coord.cs" />
+    <Compile Include="Core\Game.cs" />
+    <Compile Include="Core\Interfaces.cs" />
+    <Compile Include="Core\Json.cs" />
+    <Compile Include="Core\Player.cs" />
+    <Compile Include="Core\TiledWorld.cs" />
+    <Compile Include="Hardware\GameSprite.cs" />
+    <Compile Include="Hardware\Graphics.cs" />
+    <Compile Include="Hardware\HardwareInterface.cs" />
+    <Compile Include="Hardware\Input.cs" />
+    <Compile Include="Hardware\Mathf.cs" />
+    <Compile Include="Hardware\Sound.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="NAudio">
+      <HintPath>..\..\NAudio\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
@@ -59,6 +73,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
